# WriteYourOwn

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  start-django.sh  tailwind.config.js
api/: index.py
app/: adapters.py  admin.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_userprofile_email.py  0006_auto_20260131_1449.py
djangoproject/: settings.py  urls.py
frontend/: input.css
locale/es/LC_MESSAGES/: django.mo  django.po
static/: output.css
static/css/: output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: field.html  form.html  h1.html  h2.html  provider.html
templates/allauth/layouts/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  home.html
templates/app/layouts/: base_form.html
