[project]
name = "django-project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"

authors = [
    { name = "Harshpreet1729", email = "harshp4466@gmail.com" }
]

dependencies = [
    "django>=5.0,<6.0",
    "django-allauth[socialaccount]>=65.13.1,<66.0.0",
    "psycopg2-binary>=2.9,<3.0",
    "dj-database-url>=3.1.0,<4.0.0",
    "django-anymail[mailgun]>=14.0,<15.0",
    "django-widget-tweaks>=1.5.1,<2.0.0",
    "gunicorn>=25.0.1,<26.0.0",
    "whitenoise[brotli]>=6.11.0,<7.0.0"
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0,<7.0.0",
    "django-browser-reload>=1.21.0,<2.0.0"
]

[tool.poetry]
packages = [{ include = "djangoproject" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
